# adk-samples

./: .flake8  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml
python/agents/: README.md
python/agents/Plumber-Data-Engineering-Assistant/plumber_agent/: __init__.py  agent.py  constants.py  prompts.py
python/agents/RAG/: pyproject.toml
python/agents/RAG/rag/: __init__.py  agent.py
python/agents/RAG/rag/tests/: test_agent.py
python/agents/RAG/tests/integration/: test_agent.py  test_server_e2e.py
python/agents/ai-security-agent/: README.md  pyproject.toml
python/agents/ai-security-agent/llm_red_team_agent/: __init__.py  agent.py  agent_utils.py  config.py  safety_rules.py  tools.py
python/agents/ai-security-agent/llm_red_team_agent/sub_agents/: evaluator.py  red_team.py  target.py
python/agents/ai-security-agent/tests/: test_agent.py
python/agents/bidi-demo/: README.md  pyproject.toml
python/agents/bidi-demo/app/: main.py
python/agents/bidi-demo/app/google_search_agent/: agent.py
python/agents/blog-writer/: pyproject.toml  requirements.txt
python/agents/brand-search-optimization/: pyproject.toml
python/agents/brand-search-optimization/deployment/: bq_populate_data.py  deploy.py
python/agents/brand-search-optimization/tests/unit/: test_tools.py
python/agents/camel/: pyproject.toml
python/agents/camel/camel/camel_agent/: camel_agent.py  prompts.py  utils.py
python/agents/camel/camel/camel_library/: function_types.py  result.py  security_policy.py  system_prompt.py
python/agents/currency-agent/: pyproject.toml
python/agents/currency-agent/currency_agent/: test_client.py
python/agents/currency-agent/mcp-server/: pyproject.toml
python/agents/customer-service/customer_service/: __init__.py
python/agents/deep-search/: .env.example  README.md  pyproject.toml
python/agents/deep-search/app/: config.py
python/agents/gemini-fullstack/frontend/: package-lock.json
python/agents/hierarchical-workflow-automation/: requirements.txt
python/agents/incident-management/incident_management/: agent.py  snow_connector_tool.py
python/agents/llm-auditor/: pyproject.toml
python/agents/llm-auditor/deployment/: deploy.py
python/agents/llm-auditor/llm_auditor/sub_agents/critic/: agent.py
python/agents/llm-auditor/tests/: test_agents.py
python/agents/parallel_task_decomposition_execution/: .env-example
python/agents/personalized-shopping/personalized_shopping/: __init__.py
python/agents/policy-as-code/: README.md
python/agents/policy-as-code/policy_as_code_agent/: agent.py
python/agents/product-catalog-ad-generation/: .gitignore  README.md  agent_engine_deploy.py  pyproject.toml  requirements.txt
python/agents/product-catalog-ad-generation/content_gen_agent/: agent.py
python/agents/product-catalog-ad-generation/content_gen_agent/func_tools/: combine_video.py  generate_audio.py  generate_image.py  generate_storyline.py  generate_video.py  select_product.py
python/agents/product-catalog-ad-generation/content_gen_agent/utils/: evaluate_media.py  evaluation_prompts.py  gemini_utils.py  images.py  storytelling.py
python/agents/product-catalog-ad-generation/scripts/: 02-deploy-gcs-and-bq.sh  add_padding.py  generate_sample_data.py  populate_bq_with_gemini.py
python/agents/realtime-conversational-agent/client/: package-lock.json
python/agents/realtime-conversational-agent/server/: main.py  pyproject.toml
python/agents/retail-ai-location-strategy/: README.md  pyproject.toml
python/agents/retail-ai-location-strategy/app/: agent.py  config.py
python/agents/short-movie-agents/: pyproject.toml
python/agents/short-movie-agents/app/: agent.py  screenplay_agent.py  server.py  story_agent.py  storyboard_agent.py  video_agent.py
python/agents/story_teller/story_teller_agent/: agent.py
python/agents/tau2-benchmark-agent/: pyproject.toml
python/agents/tau2-benchmark-agent/tau2_agent/: adk_agent.py
python/agents/tau2-benchmark-agent/tests/: conftest.py  test_adk_agent.py
python/agents/travel-concierge/: pyproject.toml
python/agents/travel-concierge/deployment/: deploy.py
python/agents/travel-concierge/eval/: test_eval_arize.py
python/agents/travel-concierge/tests/: mcp_abnb.py  programmatic_example.py
python/agents/travel-concierge/travel_concierge/: __init__.py  agent.py  prompt.py  tracing.py
python/notebooks/evaluation/: user_simulation_in_adk_evals.ipynb
typescript/: README.md
typescript/agents/customer_service/: README.md  package.json  tsconfig.json
typescript/agents/customer_service/customer_service/: agent.ts  config.ts  prompts.ts
(+73 files in other folders)
