[project]
name = "ai-security-agent"
version = "0.1.0"
description = "A sophisticated multi-agent system for comprehensive AI safety testing and vulnerability assessment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.18.0",
    "google-genai>=1.9.0",
    "google-cloud-aiplatform>=1.127.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
]
