[project]
name = "realtime-conversational-agent-server"
version = "0.1.0"
description = "Example application using the Gemini Live API and ADK."
authors = [
    {name = "Stephen Allen", email = "stephenaallen@google.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "fastapi>=0.116.1",
    "google-genai>=1.36.0",
    "google-adk>=1.14.1",
]

[tool.ruff]
# Point back to the Master template in the root
extend = "../../../../pyproject.toml"

[tool.ruff.lint]
ignore = ["C901", "PLR0912"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["example_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"